-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.5
-
None
-
-
4da7638f33bafb6ea991015491fc2bf3dd943eef (qt/tqtc-qtbase/5.15)
-
Da Vinci sprint 38
Dear Qt developers:
In https://doc.qt.io/qt-5/qlist.html it's written:
{{ QList<double> list = QVector<T>::fromVector(vect);}}
{{ // list: [20.0, 30.0, 40.0, 50.0]}}
But if, for example, T is `double`, you get:
{{ error: no member named 'fromVector' in 'QVector<double>'}}
which makes sense (because `QVector` doesn't have `fromVector()`, unlike `QList`).
Thanks for making Qt better.
- is duplicated by
-
QTBUG-63671 QList documentation mistake in QList::fromVector()
-
- Closed
-
For Gerrit Dashboard: QTBUG-95351 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
363830,2 | Doc: Fix QList<T>::fromVector example in QList<T> documentation | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |