Doc: Fix QList<T>::fromVector example in QList<T> documentation

The example erroneously called `QVector<T>::fromVector`, which doesn't
exist.

This patch corrects the example so that it calls the correct method,
`QList<double>::fromVector`.

Fixes: QTBUG-95351
Change-Id: I76a890fdeaf2bfe76122482523938b51a5fe5793
Reviewed-by: Paul Wicking <paul.wicking@qt.io>